# voice2keys

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  build.rs  release-please-config.json  voice2keys.toml
.github/workflows/: lint.yaml  release-please.yaml  release.yaml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  listener.rs
crates/enigo/: Cargo.toml
crates/input/: Cargo.toml
crates/input/src/: input.rs  lib.rs  virtual_key.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs
crates/voice2keys/: main.rs
resources/: manifest.xml
voice2keys/: CHANGELOG.md  Cargo.toml
voice2keys/src/: config.rs  lib.rs  main.rs
