[package]
name = "voice2keys"
version = "1.0.1"
edition = "2021"
authors = ["majime.dev"]
description = """
voice2keys is a simple Windows utility that maps voice commands to a sequence of key presses.
"""
documentation = "https://github.com/majime-dev/voice2keys"
homepage = "https://github.com/majime-dev/voice2keys"
repository = "https://github.com/majime-dev/voice2keys"
license = "Apache-2.0"
build = "build.rs"

[package.metadata.winresource]
LegalCopyright = "Copyright © majime.dev 2023"

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bin]]
path = "crates/voice2keys/main.rs"
name = "v2k"

[workspace]
members = ["crates/core", "crates/input", "crates/terminal"]

[dependencies]
anyhow = "1.0.69"
log = "0.4.17"
simple_logger = "4.0.0"
core = { path = "crates/core" }
terminal = { path = "crates/terminal" }
winput = "0.2.5"
crossterm = { version = "0.26.1", default-features = false }

[build-dependencies]
winresource = "0.1"
