[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.69"
config = "0.13.3"
humantime-serde = "1.1.1"
log = "0.4.17"
sapi-lite = "0.1.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
winput = { version = "0.2.5", default-features = false, features = ["minimal"] }
