[package]
name = "input"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.154", features = ["derive"], optional = true }
winapi = { version = "0.3.9", features = ["winuser"] }
